add javatech